# RAGdash

./: .gitignore  README.md  app.py  autodash_sql.py  dashflask.py  data.csv  hdcs.py  index.html  neoo.py  noopur.py  noopurkiscsv.py  requirements.txt  tempCodeRunnerFile.py  trial_groq.py  utils.py  yobhai.py
OLD/: README.md  easy.py  requirements.txt  tempCodeRunnerFile.py
backend/: app.py
backend/database/: db_connection.py  queries.py  query_builder.py  sumarizer.py
backend/rag_pipeline/: generator.py  pipeline.py  retriever.py
frontend/: dashboard.py
ragdash/: pyproject.toml
ragdash/src/ragdash/: __init__.py  utils.py
ragdash/src/ragdash/base/: __init__.py  base.py  csvbase.py
ragdash/src/ragdash/chromadb/: chromadb_vector.py
ragdash/src/ragdash/exceptions/: __init__.py
ragdash/src/ragdash/groq/: __init__.py  groq.py
ragdash/src/ragdash/mock/: embedding.py  llm.py  vectordb.py
ragdash/src/ragdash/types/: __init__.py
